<resources>
    <string name="banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">Flatback</string>
    <string name="my_ads">My reviews</string>
    <string name="good_car_ads">Good</string>
    <string name="normal_pc_ads">Normal</string>
    <string name="bed_smartphone_ads">Bad</string>
    <string name="verybed_dm_ads">Horrible</string>
    <string name="sign_up">"Registration "</string>
    <string name="sign_in">Login</string>
    <string name="sign_out">Exit</string>
    <string name="account">Account</string>
    <string name="read_feed">Read reviews</string>
    <string name="email">Enter your e-mail</string>
    <string name="password">Enter your password</string>
    <string name="sign_up_button">Register now</string>
    <string name="sign_in_button">Enter</string>
    <string name="sign_in_or_sign_up">Login or register</string>
    <string name="edit_ac_title">* Title</string>
    <string name="edit_ac_price_name">Name or nick name</string>
    <string name="edit_ac_tel_address">* Enter name street</string>
    <string name="edit_number_house">* Number house/Housing/Apartment</string>
    <string name="edit_ac_discription">* Description</string>
    <string name="toggle_open">Open</string>
    <string name="toggle_close">Close</string>
    <string name="delete_title">Delete review?</string>
    <string name="delete_message">Are you sure you want to delete the review?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_deleted">Review successfully deleted!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="alert">Attention!</string>
    <string name="mail_not_verified">You haven\'t verified your account, check your email and verify your account! And log in with a new account!</string>
    <string name="mail_verification">Your mail has been sent to email, please no, go to the link in the message to verify your account!</string>
    <string name="address">"Address: "</string>
    <string name="main_image">Photo 1</string>
    <string name="image2">Photo 2</string>
    <string name="image3">Photo 3</string>
    <string name="google_sign_up">Google Sign Up</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="send_email_again">Send again</string>
    <string name="sign_link_message">You already have an account, log in to your existing account to register this email address!</string>
    <string name="account_lincked">You have successfully attached an email address to your account!</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="send_reset_password">Send</string>
    <string name="forget_password_message">To recover your password, enter the email under which you are registered!</string>
    <string name="email_is_empty">You did not enter your email.</string>
    <string name="email_is_send">Password recovery instructions have been sent to the indicated mail!</string>
    <string name="my_fav">Liked</string>
    <string name="different">All reviews</string>
    <string name="more">Load more...</string>
    <string name="host">Guest entrance</string>
    <string name="back">Back</string>
    <string name="select_country">* Select country</string>
    <string name="select_city">* Select city</string>
    <string name="no_result">No result</string>
    <string name="feedback_no_delete">Review has not been removed !!!</string>
    <string name="empty_field_error">Attention ERROR !!! All fields marked * must be completed!</string>
    <string name="email_or_password_is_empty">Email or Password is empty!</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="you_enter">You are logged in!</string>
    <string name="auth_field">Authentication failed please login again</string>
    <string name="image_no_delete">The image has not been deleted !!!</string>
    <string name="image_load">Image is loading, please wait ...</string>
    <string name="loading">Loading ...</string>
    <string name="photo_uploaded">Photo uploaded!</string>
    <string name="feedback_loaded">Feedback loaded!</string>
    <string name="first_country">First select the country!</string>
    <string name="select_filter_country">Select a country to filter:</string>
    <string name="select_filter_city">Select a city to filter:</string>
    <string name="use_filter">Use filter</string>
    <string name="select_country_f_title">Select country</string>
    <string name="select_city_f_title">Select city</string>
    <string name="select_address">Enter street name:</string>
    <string name="select_address_hint">Street</string>
    <string name="select_house">Enter number house:</string>
    <string name="select_house_hint">House</string>
    <string name="select_private_policy">*С правилами согласен(на)</string>
    <string name="send_private_policy">*С правилами на публикацию согласен(на)</string>
    <string name="ok_private_policy">*Подтвердите согласие на публикацию</string>
    <string name="no_use_filter">Не использовать фильтр</string>
    <string name="info_act">Privacy policy</string>
    <string name="filter_act">Filter</string>
    <string name="info">Information</string>
    <string name="rules">Нажмите,что бы ознакомиться с правилами</string>
    <string name="save_private_data">Политика использования данных</string>
</resources>