<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/niagara">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickSavePost"
        android:padding="4dp"
        app:backgroundTint="@color/niagara"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save_photo" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/niagara"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/header_text_bg_white"
                    android:onClick="onClickImage"
                    android:padding="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.viewpager.widget.ViewPager>

                <ImageButton
                    android:id="@+id/imEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/header_text_bg"
                    android:onClick="onClickImage"
                    android:padding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_edit_images" />

                <TextView
                    android:id="@+id/tvImagesCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/header_text_bg"
                    android:padding="4dp"
                    android:text="0/0"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/view_pager"
                    app:layout_constraintEnd_toEndOf="@+id/view_pager"
                    app:layout_constraintStart_toStartOf="@+id/view_pager" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/grey"
                android:padding="4dp"
                android:popupBackground="@drawable/header_text_bg_white"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/header_text_bg_white"
                android:ems="10"
                android:hint="@string/edit_ac_price_name"
                android:inputType="textPersonName"
                android:padding="4dp"
                android:textColorHint="@color/grey" />

            <TextView
                android:id="@+id/tvSelectCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/header_text_bg_white"
                android:onClick="onClickSetCountry"
                android:padding="4dp"
                android:text="@string/select_country"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSelectCitty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/header_text_bg_white"
                android:onClick="onClickSetCity"
                android:padding="4dp"
                android:text="@string/select_city"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/header_text_bg_white"
                android:ems="10"
                android:hint="@string/edit_ac_tel_address"
                android:inputType="textMultiLine|textPersonName"
                android:padding="4dp"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/edHouseAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/header_text_bg_white"
                android:ems="10"
                android:hint="@string/edit_number_house"
                android:inputType="textMultiLine|textPersonName"
                android:padding="4dp"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/edTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/header_text_bg_white"
                android:ems="10"
                android:hint="@string/edit_ac_title"
                android:inputType="textMultiLine|textPersonName"
                android:padding="4dp"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/edDisc"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/header_text_bg_white"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/edit_ac_discription"
                android:inputType="textMultiLine|textPersonName"
                android:padding="4dp"
                android:textColorHint="@color/grey" />

            <CheckBox
                android:id="@+id/editCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:buttonTint="@color/black"
                android:text="@string/send_private_policy"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/discRules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickPrivatePolicy"
                android:text="@string/rules"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>