<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="@drawable/sign_up_dialog_bg_no_pic"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:background="@drawable/sign_up_dialog_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <TextView
        android:id="@+id/tvAlertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textColor="@color/grey"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edEmail"
        app:layout_constraintStart_toStartOf="@+id/edEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/header_text_bg_white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/niagara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/header_text_bg_white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/niagara"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edEmail"
        app:layout_constraintStart_toStartOf="@+id/edEmail"
        app:layout_constraintTop_toBottomOf="@+id/edEmail" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/editbox_background_normal"
        android:text="@string/sign_up_button"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/edEmail"
        app:layout_constraintStart_toStartOf="@+id/edEmail"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/bSignGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:buttonSize="wide"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="@+id/edEmail"
        app:layout_constraintStart_toStartOf="@+id/edEmail"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bForgetPassword"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background_normal"
        android:text="@string/forget_password"
        android:textColor="@color/grey"
        android:textColorLink="#FFFFFF"
        android:textSize="12sp"
        android:visibility="visible"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="@+id/edEmail"
        app:layout_constraintStart_toStartOf="@+id/edEmail"
        app:layout_constraintTop_toBottomOf="@+id/bSignGoogle" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>